Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <!-- aqui se fecha a nav-bar e começa a primeira section denominada como "topico-1" -->
 
-<section class="conteudo"> <!-- abertura da section 1 -->
+<section> <!-- abertura da section 1 -->
     <div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-1"> <!-- abertura da div "topic-1" -->
 
     <img class="topic-1-img-1" src="img/desenhos/img-3.jpg"> <!-- aqui está a minha imagem 1, a maior -->
@@ -41,7 +41,7 @@
     </div> <!-- fechamento da div "topic-1" -->
 </section> <!-- fechamento da section 1 -->
 
-<section class="conteudo"> <!-- abertura da section 2 -->
+<section> <!-- abertura da section 2 -->
 <div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-2">
 
 
@@ -53,21 +53,19 @@
     <img class="topic-2-img-3" src="img/design/com-ciencia1.png">
     <img class="topic-2-img-4" src="img/design/racismo .png">
     <img class="topic-2-img-5" src="img/design/realismo.png">
-    <img class="topic-2-img-1" src="img/design/arado .png">
-    <img class="topic-2-img-2" src="img/design/arraia.png">
-    <img class="topic-2-img-3" src="img/design//naruto.png">
-    <img class="topic-2-img-4" src="img/design/carton.png">
-    <img class="topic-2-img-5" src="img/design/carton-2.png">
+    <img class="topic-2-img-6" src="img/design/arado .png">
+    <img class="topic-2-img-7" src="img/design/arraia.png">
+    <img class="topic-2-img-8" src="img/design//naruto.png">
+    <img class="topic-2-img-9" src="img/design/carton.png">
+    <img class="topic-2-img-10" src="img/design/carton-2.png">
         </div>  
 
         <p class="topic-2-p-fim"><b>em breve...</b></p>
 </div>
 </section> <!-- fechamento da section 2 -->
 
-<section class="conteudo"> <!-- abertura da section 3 -->
-<div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-3">
-
-
+<section> <!-- abertura da section 3 -->
+<div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-3">
 
     <h1 class="topic-3-title">Certificados</h1>
     <div class="topic-3-imgs">
@@ -109,10 +107,9 @@
 </div>
 </section> <!-- fechamento da section 3 -->
 
-<section class="conteudo"> <!-- abertura da section 4 -->
+<section> <!-- abertura da section 4 -->
     <div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-4">
-
-    
+
         <h1 class="topic-4-title">Curriculo</h1>
         <div class="topic-4-imgs">
         <img class="topic-4-img-1" src="img/curriculo/curriculo-1.jpg">
