--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/index.js"></script>
     <link rel="stylesheet" href="css/responsivo.css">
     <title>Meu Portifolio - Inicio</title>
 
@@ -27,7 +26,7 @@
 <section> <!-- abertura da section 1 -->
     <div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-1"> <!-- abertura da div "topic-1" -->
 
-    <img class="topic-1-img-1" src="img/desenhos/img-3.jpg"> <!-- aqui está a minha imagem 1, a maior -->
+    <img class="topic-1-img-1" src="img/desenhos/img-3.jpg"> <!-- aqui está a minha imagem 1, a maior -->
 
     <h2 class="topic-1-title">Meus Desenhos:</h2> <!-- esse é o titulo do meu topico "sobre mim" -->
 
@@ -41,7 +40,7 @@
     </div> <!-- fechamento da div "topic-1" -->
 </section> <!-- fechamento da section 1 -->
 
-<section> <!-- abertura da section 2 -->
+<section"> <!-- abertura da section 2 -->
 <div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-2">
 
 
@@ -49,25 +48,29 @@
 
     <div class="topic-2-imgs">
     <img class="topic-2-img-1" src="img/design/controle.png">
-    <img class="topic-2-img-2" src="img/design/pizza.png">
-    <img class="topic-2-img-3" src="img/design/com-ciencia1.png">
-    <img class="topic-2-img-4" src="img/design/racismo .png">
-    <img class="topic-2-img-5" src="img/design/realismo.png">
-    <img class="topic-2-img-6" src="img/design/arado .png">
-    <img class="topic-2-img-7" src="img/design/arraia.png">
-    <img class="topic-2-img-8" src="img/design//naruto.png">
-    <img class="topic-2-img-9" src="img/design/carton.png">
-    <img class="topic-2-img-10" src="img/design/carton-2.png">
-        </div>  
+    <img class="topic-2-img-1" src="img/design/pizza.png">
+    <img class="topic-2-img-1" src="img/design/com-ciencia1.png">
+    <img class="topic-2-img-1" src="img/design/racismo .png">
+    <img class="topic-2-img-1" src="img/design/realismo.png">
+    <img class="topic-2-img-1" src="img/design/arado .png">
+    <img class="topic-2-img-1" src="img/design/arraia.png">
+    <img class="topic-2-img-1" src="img/design//naruto.png">
+    <img class="topic-2-img-1" src="img/design/carton.png">
+    <img class="topic-2-img-1" src="img/design/carton-2.png">
+    </div>  
 
-        <p class="topic-2-p-fim"><b>em breve...</b></p>
+    <p class="topic-2-p-fim"><b>em breve...</b></p>
+
 </div>
 </section> <!-- fechamento da section 2 -->
 
 <section> <!-- abertura da section 3 -->
-<div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-3">
+<div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-3">
+
+
 
     <h1 class="topic-3-title">Certificados</h1>
+
     <div class="topic-3-imgs">
     <img class="topic-3-img-1" src="img/certificados/ciencia-de-dados.png">
     <img class="topic-3-img-2" src="img/certificados/pro-web.jpg">
@@ -80,25 +83,25 @@
         <li>Programação .Net Avançado - <b>IFMG</b></li>
         <li>Automação de Sistemas - <b>IFRS</b></li>
         <li>Banco de Dados - <b>IFSUL</b></li>
-        <li>Big Data em Apoio à Tomada de Decisão - <b>ENAP</b></li>
-        <li>Introdução a Ciência de Dados - <b>FGV</b></li>
+        <li>Big Data - <b>ENAP</b></li>
+        <li>Ciência de Dados - <b>FGV</b></li>
         <li>Comunicação Oral e Escrita - <b>IFMG</b></li>
-        <li>Design de Aplicativos na Transformação Digital - <b>ENAP</b></li>
+        <li>Design de Aplicativos - <b>ENAP</b></li>
         <li>Fundamentos da Programação - <b>IFSUL</b></li>
         <li>Gerenciamento das Partes Interessadas - <b>IFMG</b></li>
         <li>Criação de Indicadores de Desempenho - <b>ENAP</b></li>
-        <li>A Base Para Inteligência Emocional e Resiliência - <b>FGV</b></li>
+        <li>Inteligência Emocional e Resiliência - <b>FGV</b></li>
         <li>JavaScript - <b>IFRS</b></li>
         <li>Learning with Python - <b>ENAP</b></li>
         <li>Lógica de Programação - <b>IFSUL</b></li>
-        <li>Linguagens de Programação Orientadas a Objetos - <b>IFSUL</b></li>
+        <li>Linguagens POO - <b>IFSUL</b></li>
         <li>Programação Web Avançado - <b>IFMG</b></li>
-        <li>Programador Web em Tecnologias Front-end - <b>IFMG</b></li>
+        <li>Programador Front-end - <b>IFMG</b></li>
         <li>Projeto de Sistemas Web - <b>IFRS</b></li>
         <li>Python Avançado - <b>IFMG</b></li>
         <li>Introdução ao Scrum - <b>IFMG</b></li>
-        <li>Soft Skills na Transformação Digital - <b>ENAP</b></li>
-        <li>Experiência do Usuário - UX - <b>IFSUL</b></li>
+        <li>Soft Skills - <b>ENAP</b></li>
+        <li>Experiência do Usuário - <b>IFSUL</b></li>
     </ul>
 
     <p class="topic-3-p-fim"><b>9</b> cursos, <b>20</b> palestras e <b>2</b> oficinas <b>não citadas!</b></p>
@@ -109,7 +112,8 @@
 
 <section> <!-- abertura da section 4 -->
     <div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-4">
-
+
+    
         <h1 class="topic-4-title">Curriculo</h1>
         <div class="topic-4-imgs">
         <img class="topic-4-img-1" src="img/curriculo/curriculo-1.jpg">
@@ -134,7 +138,7 @@
         <a style="font-size:0;" href="x"> <img class="img-fotter" src="img/icons/email.png"> </a> <!-- link junto a imagem (email) -->
         </div>  <!-- fechamento da div 'icons-fotter' -->
 
-        <p class="fotter-p-fim">Até logo ☻</p>
+        <p class="fotter-p-fim">© Todos os direitos reservados</p>
 </footer> <!-- fechamento do footer -->
 
 </body>
