--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/responsivo.css">
-    <title>Meu Portifolio - Inicio</title>
+    <link rel="icon" href="img/icons/letra-a.png" type="icon">
+    <title>site web | @alephsramos</title>
 
 </head>
 <body>
@@ -24,24 +25,25 @@
 <!-- aqui se fecha a nav-bar e começa a primeira section denominada como "topico-1" -->
 
 <section> <!-- abertura da section 1 -->
-    <div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-1"> <!-- abertura da div "topic-1" -->
+    <div style="background-image: url('img/backgrounds/desenhos.jpg'); box-shadow: inset 3200px 0px 0px 800px rgb(0, 0, 0, 0.4); background-size: cover;" class="topic-1"> <!-- abertura da div "topic-1" -->
 
-    <img class="topic-1-img-1" src="img/desenhos/img-3.jpg"> <!-- aqui está a minha imagem 1, a maior -->
+    <img class="topic-1-img-1" src="img/desenhos/desenho1.png"> <!-- aqui está a minha imagem 1, a maior -->
 
     <h2 class="topic-1-title">Meus Desenhos:</h2> <!-- esse é o titulo do meu topico "sobre mim" -->
 
     <p class="topic-1-paragraph-1">Durante o período da pandemia, desenvolvi um profundo apreço pela prática da criação artística, explorando tanto o <b>desenho digital</b> quanto a <b>expressão manual em papel</b>. A dedicação a esse hobby permitiu um significativo aprimoramento do meu <b>potencial criativo.</b></p> <!-- paragrafo 1 -->
         
-    <p class="topic-1-paragraph-2">No contexto da <b>criatividade</b>, ao conceber designs e até mesmo desenvolver websites, fui capaz de cultivar abordagens inovadoras, personalizando-os de maneira <b>autêntica e totalmente autoral.</b></p> <!-- paragrafo 2 -->
+    <p class="topic-1-paragraph-2">
+        No contexto da <b>criatividade</b>, ao me engajar na concepção de designs e, inclusive, no desenvolvimento de websites, desenvolvi a capacidade de empregar abordagens inovadoras. Essa jornada me proporcionou a oportunidade de personalizar cada projeto de maneira <b>autêntica e totalmente autoral,</b> conferindo-lhes uma camada única de originalidade e distinção. Através desse processo, pude cultivar uma expressão criativa que vai além dos simples parâmetros, me destacando pela singularidade e pela qualidade intrínseca de cada empreendimento.</p> <!-- paragrafo 2 -->
 
-    <img class="topic-1-img-2" src="img/desenhos/img-2.jpg"> <!-- aqui está a segunda imagem, a menor -->
+    <img class="topic-1-img-2" src="img/desenhos/desenho2.png"> <!-- aqui está a segunda imagem, a menor -->
 
 
     </div> <!-- fechamento da div "topic-1" -->
 </section> <!-- fechamento da section 1 -->
 
-<section"> <!-- abertura da section 2 -->
-<div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-2">
+<section> <!-- abertura da section 2 -->
+<div style="background-image: url('img/backgrounds/design.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8); background-size: cover;" class="topic-2">
 
 
     <h1 class="topic-2-title">Design</h1>
@@ -59,13 +61,13 @@
     <img class="topic-2-img-1" src="img/design/carton-2.png">
     </div>  
 
-    <p class="topic-2-p-fim"><b>em breve...</b></p>
+    <p class="topic-2-p-fim"><b>novidades em breve...</b></p>
 
 </div>
 </section> <!-- fechamento da section 2 -->
 
 <section> <!-- abertura da section 3 -->
-<div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-3">
+<div style="background-image: url('img/backgrounds/certificado.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8); background-size: cover;" class="topic-3">
 
 
 
@@ -77,7 +79,7 @@
     <img class="topic-3-img-3" src="img/certificados/sistema-web.jpg">
     </div>
 
-    <p class="topic-3-p-1">Aqui estão apenas 3 imagens dos certificados que eu tenho, não a como eu colocar todos aqui, pois são mais de 50 imagens, então irei deixar abaixo os <b>cursos que já fiz, não irá inlcuir as palestras e nem oficinas.</b></p>
+    <p class="topic-3-p-1">A seguir, apresento apenas três imagens de certificados que possuo. <b>Devido à quantidade considerável, totalizando mais de 50 certificações,</b> não é viável exibir todas neste espaço. No entanto, abaixo estão listados os <b>cursos, e oficinas que já concluí, vale ressaltar que não vou colocar as palestras, por também ter um número consideravelmente alto.</b></p>
 
     <ul class="topic-3-list">
         <li>Programação .Net Avançado - <b>IFMG</b></li>
@@ -102,16 +104,26 @@
         <li>Introdução ao Scrum - <b>IFMG</b></li>
         <li>Soft Skills - <b>ENAP</b></li>
         <li>Experiência do Usuário - <b>IFSUL</b></li>
+        <li>Administração - <b>CURSA</b></li>
+        <li>CSS Completo - <b>CURSA</b></li>
+        <li>Gestão de MEI e MPE - <b>CURSA</b></li>
+        <li>Gestão de Projetos - <b>IFRO</b></li>
+        <li>HTML Completo - <b>CURSA</b></li>
+        <li>Identidade de Marca - <b>IFRJ</b></li>
+        <li>Desenvolvimento de Produtos - <b>UNIVESP</b></li>
+        <li>Microsoft Excel - <b>CURSA</b></li>
+        <li>Power Point - <b>CURSA</b></li>
+        <li>Microsoft Word - <b>CURSA</b></li>
     </ul>
 
-    <p class="topic-3-p-fim"><b>9</b> cursos, <b>20</b> palestras e <b>2</b> oficinas <b>não citadas!</b></p>
+    <p class="topic-3-p-fim">Em breve mais atualizações</p>
 
 
 </div>
 </section> <!-- fechamento da section 3 -->
 
 <section> <!-- abertura da section 4 -->
-    <div style="background-image: url('img/backgrounds/teste.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8);" class="topic-4">
+    <div style="background-image: url('img/backgrounds/curriculo.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.8); background-size: cover;" class="topic-4">
 
     
         <h1 class="topic-4-title">Curriculo</h1>
@@ -120,16 +132,16 @@
         <img class="topic-4-img-2" src="img/curriculo/curriculo-2.jpg">
     </div>
 
-    <p class="topic-4-p-fim">Última atualização 15/11/2023 às 18:07</p>
+    <p class="topic-4-p-fim">Última atualização 17/11/2023 às 08:57</p>
 
 </div>
 </section> <!-- fechamento da section 4 -->
 
-<footer> <!-- abertura do footer -->
+<footer style="background-image: url('img/backgrounds/footer.jpg'); box-shadow: inset 500px 0px 0px 800px rgb(0, 0, 0, 0.3); background-size: cover;"> <!-- abertura do footer -->
 
 
-    <h1 class="fotter-title">Esse site foi construido completamente com HTML e CSS</h1>
-    <h2 class="fotter-contat">Entrar em contato:</h2>
+    <h1 class="fotter-title">Este site foi desenvolvido exclusivamente com HTML e CSS.</h1>
+    <h2 class="fotter-contat">Contate-me:</h2>
 
     <div class="icons-fotter">  <!-- criei essa div para conseguir mover tudo junto no css -->
         <a style="font-size:0;" href="x"> <img class="img-fotter" src="img/icons/linkedin.png"> </a> <!-- link junto a imagem (github) -->
